5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4373/executions/1577_1332.log
== TEST (2019-03-26 18:34:21) 
-- CODE:
aresta =5
area = 3/2*(3a**2)**0.5
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3a**2)**0.5
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:34:38) 
-- CODE:
aresta =5
area =3/2*(3a**2)**0.5
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area =3/2*(3a**2)**0.5
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:19) 
-- CODE:
aresta =5
area =3/2*((3a**2)**0.5)
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area =3/2*((3a**2)**0.5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:35:22) 
-- CODE:
aresta =5
area =3/2*((3a**2)**0.5)
 
print(round(area,4))
-- EXECUTION TIME:
0.180061
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 2
    area =3/2*((3a**2)**0.5)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:24) 
-- CODE:
aresta =5
area =3/2*((3a**2)**0.5)
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area =3/2*((3a**2)**0.5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:35:58) 
-- CODE:
aresta =5
area =3/2*((3aresta**2)**0.5)
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area =3/2*((3aresta**2)**0.5)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:36:25) 
-- CODE:
a =5
area =3/2*((3a**2)**0.5)
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area =3/2*((3a**2)**0.5)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:01) 
-- CODE:
a =5
area =3/2((3a**2)**0.5)
 
print(round(area,4))
-- ERROR:
File "XXXX", line 2
    area =3/2((3a**2)**0.5)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:24) 
-- CODE:
a =5
area =3/2((3*a**2)**0.5)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2((3*a**2)**0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:37:27) 
-- CODE:
a =5
area =3/2((3*a**2)**0.5)
 
print(round(area,4))
-- EXECUTION TIME:
0.16542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 2, in <module>
    area =3/2((3*a**2)**0.5)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:28) 
-- CODE:
a =5
area =3/2((3*a**2)**0.5)
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2((3*a**2)**0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:37:52) 
-- CODE:
a =5
area =3/2((3*(a**2)**0.5))
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2((3*(a**2)**0.5))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:07) 
-- CODE:
a =5
area =(3/2((3*(a**2)**0.5)))
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2((3*(a**2)**0.5)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:38:50) 
-- CODE:
a=5
area=3/2((3*(a**2)**0.5))
 
print(round(area,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2((3*(a**2)**0.5))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:35) 
-- CODE:
a=5
area=3/2((3*(a**2)**0.5))
 
print(area)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2((3*(a**2)**0.5))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:39:47) 
-- CODE:
a=5
b=3/2((3*(a**2)**0.5))
 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=3/2((3*(a**2)**0.5))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:40:58) 
-- CODE:
a=5
b=3/2((3*(a**2))**0.5)
 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=3/2((3*(a**2))**0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:41:37) 
-- CODE:
a=5
b=3/2((3*(a**2))**0.5)
 
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    b=3/2((3*(a**2))**0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:16) 
-- CODE:
a=5
c=a**2
b=3/2((3*(a**2))**0.5)
 
print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    b=3/2((3*(a**2))**0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:43:25) 
-- CODE:
a=5
c=a**2

 
print(c)
-- OUTPUT:
25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:44:02) 
-- CODE:
a=5
c=a**2
d=3*c
 
print(c,d)
-- OUTPUT:
25 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:34) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
print(c,d,f)
-- OUTPUT:
25 75 8.660254037844387
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:54) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
print(c,d,f)
-- OUTPUT:
25 75 8.660254037844387
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:45:57) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
print(c,d,f)
-- EXECUTION TIME:
0.154094
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
25 75 8.660254037844387
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:45:57) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
print(c,d,f)
-- OUTPUT:
25 75 8.660254037844387
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:04) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
print(c,d,f,g)
-- OUTPUT:
25 75 8.660254037844387 12.99038105676658
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:33) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
print(round(g,4))
print(c,d,f,g)
-- OUTPUT:
12.9904
25 75 8.660254037844387 12.99038105676658
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:54) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
e=3/2*(3*a**2)**0.5
print(round(g,4))
print(c,d,f,g)
print(round(e,4))
-- OUTPUT:
12.9904
25 75 8.660254037844387 12.99038105676658
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:15) 
-- CODE:
a=5
c=a**2
d=3*c
f=(d)**0.5
g=3/2*f
area=3/2*(3*a**2)**0.5
print(round(g,4))
print(c,d,f,g)
print(round(area,4))
-- OUTPUT:
12.9904
25 75 8.660254037844387 12.99038105676658
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:52) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:55) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- EXECUTION TIME:
0.190179
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:56) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:58) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- EXECUTION TIME:
0.15171
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:00) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:32) 
-- CODE:
a=5
area=3/2*((3*a**2)**0.5)
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:33) 
-- CODE:
a=5
area=3/2*((3*a**2)**0.5)
print(round(area,4))
-- EXECUTION TIME:
0.173001
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:35) 
-- CODE:
a=5
area=3/2*((3*a**2)**0.5)
print(round(area,4))
-- EXECUTION TIME:
0.233426
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:52:02) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:53:22) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,2))
-- OUTPUT:
12.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:53:24) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,2))
-- EXECUTION TIME:
0.164642
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:53:25) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,2))
-- OUTPUT:
12.99
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:53:57) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(area)
print(round(area,4))
-- OUTPUT:
12.99038105676658
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:54:55) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:22) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5

print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:55:23) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5

print(round(area,4))
-- EXECUTION TIME:
0.184629
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:25) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5

print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:57:17) 
-- CODE:
a=5
area=3/2*(3*a**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:57:46) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:57:47) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
print(round(area,4))
-- EXECUTION TIME:
0.158936
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:57:48) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
print(round(area,4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:16:28) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
b=(4)**0.5
print(round(area,4))
print(b)
-- OUTPUT:
12.9904
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:16:38) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5

print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:16:38) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5

print(round(area,4))

-- EXECUTION TIME:
0.132799
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:20:25) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5

print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:20:43) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5

print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:18) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5

print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:23) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5

print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:22:24) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:22:29) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
print(round(area,4))

-- EXECUTION TIME:
0.144724
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:22:30) 
-- CODE:
aresta=5
area=3/2*(3*aresta**2)**0.5
print(round(area,4))

-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:50) 
-- CODE:
aresta=5
area=3/2*3**0.5*aresta**2
print(round(area,4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:23:52) 
-- CODE:
aresta=5
area=3/2*3**0.5*aresta**2
print(round(area,4))

-- EXECUTION TIME:
0.116691
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:23:54) 
-- CODE:
aresta=5
area=3/2*3**0.5*aresta**2
print(round(area,4))

-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:23:59) 
-- CODE:
aresta=5
area=3/2*3**0.5*aresta**2
print(round(area,4))

-- EXECUTION TIME:
0.223979
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
